# muon-kernel

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  MILESTONES.md  Makefile  README.md  meson.build  meson_options.txt
bootloader/: CMakeLists.txt  meson.build
bootloader/boson/: CMakeLists.txt
bootloader/boson-uefi/: CMakeLists.txt
bootloader/boson-uefi/scripts/: linkerscript.ld.in
bootloader/boson-uefi/src/: entry.c
bootloader/boson/include/: bootloader.h  console.h  file.h  memory_consumer.h  memory_manager.h  string.h
bootloader/boson/include/efi/: boot_services.h  configuration_table.h  efi.h  file_protocol.h  image_protocol.h  memory.h  memory_type.h  runtime_services.h  status.h  time.h
bootloader/boson/include/exception/: bootloader_exception.h  console_exception.h  file_exception.h  memory_exception.h
bootloader/boson/include/utils/: log.h  string.h  utils.h
bootloader/boson/src/: bootloader.c  console.c  entry.c  file.c  memory_consumer.c  memory_manager.c  string.c  trampoline.s
bootloader/boson/src/efi/: time.c
bootloader/boson/src/exception/: bootloader_exception.c  console_exception.c  file_exception.c  memory_exception.c
bootloader/boson/src/utils/: log.c  string.c  utils.c
kernel/: CMakeLists.txt  meson.build  x86_64.ld
kernel/include/: int.h  wchar.h
kernel/include/boot/efi/: efi.h
kernel/include/devices/: port.h  serial.h
kernel/include/x86_64/: gdt.h
kernel/scripts/: common.ld.in  compose.ld.in
kernel/scripts/arch/: x86_64.ld.in
kernel/scripts/boot/: uefi.ld.in
kernel/src/: boson.c3  entry.c3  formatting.c3  lang.c3  logging.c3  muon.c3  muon.c3i
kernel/src/arch/x86_64/: arch.c  arch.c3  arch.types.c3  gdt.c  gdt.c3  gdt.types.c3  gdts.s  random.c3
kernel/src/arch/x86_64/cpu/: cpu.c3  cpuid.c3  gdt.c3  gdt.s  gdt.types.c3  idt.c3  idt.c3i  sse.c3  sse.c3i  tss.c3  tss.c3i  tss.types.c3
kernel/src/arch/x86_64/dev/: port.c3  port.s
kernel/src/arch/x86_64/dev/acpi/: acpi.c3  acpi.types.c3
kernel/src/arch/x86_64/dev/interrupts/: apic.c3  apic.c3i  apic.types.c3  pic.c3
kernel/src/arch/x86_64/dev/timing/: hpet.c3  hpet.c3i  hpet.types.c3  pit.c3  rtc.c3  rtc.c3i  timing.c3  timing.c3i
kernel/src/arch/x86_64/devices/: port.c  serial.c
kernel/src/arch/x86_64/interrupts/: handlers.c3  interrupts.c3  interrupts.c3i  interrupts.types.c3  routines.c3
kernel/src/arch/x86_64/mem/: mem.c3  pagefault.c3  paging.c3  paging.c3i  paging.types.c3
kernel/src/arch/x86_64/process/: task.c3  task.c3i
kernel/src/arch/x86_64/scheduler/: task.c3  task.c3i
kernel/src/authority/: authority.c3  handle.c3  handle.c3i  object.c3  object.c3i  table.c3
kernel/src/boot/uefi/: CMakeLists.txt  entry.c
kernel/src/demo/: shell.c3  term.c3
kernel/src/demo/programs/: forge.c3  monitor.c3  random.c3  sleep.c3  spawner.c3  spinner.c3  time.c3
kernel/src/dev/: mmio.c3  port.c3  serial.c3  serial.c3i  serial.types.c3
kernel/src/dev/timing/: timing.c3  timing.c3i
kernel/src/handle/: handle.c3  handle.c3i
kernel/src/mem/: pmm.c3  vmm.c3  vmm.c3i
kernel/src/process/: monitor.c3  process.c3  scheduler.c3  task.c3  task.c3i  workers.c3
kernel/src/resource/: handle.c3  handle.c3i
kernel/src/scheduler/: scheduler.c3  task.c3  task.c3i  workers.c3
kernel/src/sync/: semaphore.c3
kernel/test/: scheduler.c3t  scheduler_fpu.c3t  test.c3t
shared/: CMakeLists.txt  meson.build
shared/include/: base.h  bool.h  int.h  lepton.h
shared/include/base/: bool.h  null.h  size.h  vargs.h
shared/include/boson/: boson.h
shared/include/core/: bytearray.h
shared/include/elf/: elf.h  elf_parser.h  program.h  section.h
shared/include/lepton/: assert.h  class.h  core.h  object.h  result.h  runtime.h  throwable.h
shared/include/lepton/core/: class.h  enum.h  object.h
shared/include/lepton/exception/: exception.h  invalid_parameter_exception.h  no_such_enum_member_exception.h  null_exception.h  result_exception.h
shared/libs/: atomic.c3  datetime.c3  datetime.c3i  env.c3  formatting.c3  lang.c3  math.c3  spinlock.c3
shared/libs/collections/: bitmap.c3  iterator.c3i  linkedlist.c3
shared/libs/io/: ringbuffer.c3  stream.c3i
shared/libs/mem/: allocator.c3i  block_allocator.c3  buddy_allocator.c3
shared/src/core/: bytearray.c
shared/src/elf/: elf_parser.c
shared/src/lepton/: class.c  object.c  runtime.c  throwable.c
shared/src/lepton/core/: class.c  object.c
shared/src/lepton/exception/: exception.c  exception_runtime.S  exception_runtime_x86_64_ms.s  exception_runtime_x86_64_sysv.s  invalid_parameter_exception.c  no_such_enum_member_exception.c  null_exception.c  result_exception.c
toolchain/: boson-toolchain.txt  muon-toolchain.txt
