shared_inc = include_directories(
    'include',
    'src/lepton/exception'
)

libcore_sources = files(
    'src/core/bytearray.c',
)

liblepton_sources = files(
    'src/lepton/runtime.c',
    'src/lepton/throwable.c',
    'src/lepton/core/class.c',
    'src/lepton/core/object.c',
    'src/lepton/exception/exception.c',
    'src/lepton/exception/null_exception.c',
    'src/lepton/exception/result_exception.c',
    'src/lepton/exception/exception_runtime.S',
)
